# rabbitmq-stream-rust-client

./: .tarpaulin.toml  CHANGELOG.md  CODE-OF-CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE2  LICENSE-MPQ-RabbitMQ  Makefile  NOTICE  README.md  release-plz.toml  rustfmt.toml
.ci/certs/: ca_certificate.pem  server_key.pem
.github/: dependabot.yml
.github/workflows/: coverage.yml  docker-image.yml  publish.yml  release-plz.yml  test.yml
benchmark/: Cargo.toml
benchmark/src/: main.rs  stats.rs
compose/: docker-compose.yml
docker/: Dockerfile
docker/certs/: ca_key.pem  server_certificate.pem
examples/: batch.rs  batch_send.rs  complex_message.rs  env_callback.rs  environment.rs  environment_deserialization.rs  filtering.rs  ha_producer.rs  raw_client.rs  receive_super_stream.rs  send_async.rs  send_super_stream.rs  send_with_confirm.rs  simple-consumer.rs  tls_producer.rs
examples/filtering/: receive_with_filtering.rs  send_with_filtering.rs
examples/single_active_consumer/: Cargo.toml  README.md  example_for_enrico.rs  single_active_consumer.rs  single_active_consumer_super_stream.rs
examples/single_active_consumer/src/: main.rs  send_super_stream.rs  single_active_consumer_super_stream.rs
examples/super_stream_single_active_consumer/: Cargo.toml  README.md
examples/super_stream_single_active_consumer/src/: main.rs  send_super_stream.rs  single_active_consumer_super_stream.rs
examples/superstreams/: receive_super_stream.rs  send_super_stream.rs  send_super_stream_hash.rs  send_super_stream_routing_key.rs
examples/tls/: producer.rs
protocol/: CHANGELOG.md  Cargo.toml
protocol/src/: codec.rs  error.rs  lib.rs  message.rs  protocol.rs  request.rs  response.rs  types.rs  utils.rs
protocol/src/codec/: decoder.rs  encoder.rs  mod.rs
protocol/src/commands/: close.rs  consumer_update.rs  consumer_update_request.rs  create_stream.rs  create_super_stream.rs  credit.rs  declare_publisher.rs  delete.rs  delete_publisher.rs  delete_super_stream.rs  deliver.rs  exchange_command_versions.rs  generic.rs  heart_beat.rs  metadata.rs  metadata_update.rs  mod.rs  open.rs  peer_properties.rs  publish.rs  publish_confirm.rs  publish_error.rs  query_offset.rs  query_publisher_sequence.rs  sasl_authenticate.rs  sasl_handshake.rs  store_offset.rs  subscribe.rs  superstream_partitions.rs  superstream_route.rs  tmp_cmds.rs  tune.rs  unsubscribe.rs
protocol/src/message/: builder.rs  mod.rs
protocol/src/message/amqp/: body.rs  error.rs  header.rs  message.rs  mod.rs  properties.rs  section.rs
protocol/src/message/amqp/codec/: constants.rs  mod.rs
protocol/src/message/amqp/fixtures/: empty_message  header_amqpvalue_message  message_body_250  message_body_700  message_random_application_properties_300  message_random_application_properties_500  message_random_application_properties_properties_900  static_test_message_compare
protocol/src/message/amqp/types/: annotations.rs  definitions.rs  descriptor.rs  mod.rs  symbol.rs
protocol/src/message/amqp/types/primitives/: list.rs  map.rs  mod.rs  simple.rs  value.rs
protocol/src/request/: mod.rs  shims.rs
protocol/src/response/: mod.rs  shims.rs
src/: broker.rs  byte_capacity.rs  channel.rs  client.rs  codec.rs  consumer.rs  dispatcher.rs  environment.rs  error.rs  lib.rs  metadata.rs  offset_specification.rs  options.rs  producer.rs  stream_creator.rs  superstream.rs  superstream_consumer.rs  superstream_producer.rs
src/client/: channel.rs  codec.rs  dispatcher.rs  handler.rs  message.rs  metadata.rs  metrics.rs  mod.rs  options.rs  task.rs
tests/: client_test.rs  common.rs  consumer_test.rs  environment_test.rs  producer_test.rs
tests/integration/: client_test.rs  common.rs  consumer_test.rs  environment_test.rs  main.rs  producer_test.rs
