[package]
name = "rabbitmq-stream-client"
version = "0.1.0"
authors = ["wolf4ood <enrico.risa@gmail.com>", "korsmakolnikov <korsmakolnikov@gmail.com>", "gsantomaggio <g.santomaggio@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MPL-2.0"


[workspace]
members = [
 ".",
 "protocol",
 "benchmark"
]


[dependencies]
rabbitmq-stream-protocol = { version = "0.1" , path = "protocol" }
tokio = { version = "1.12.0", features = ["full"] }
tokio-util = {  version = "0.6.7", features = ["codec"] }
bytes = "1.0.0"
tokio-stream = "0.1.7"
futures = "0.3.0"
url = "2.2.2"
tracing = "0.1"
thiserror = "1.0"
async-trait = "0.1.51"
rand = "0.8"
dashmap = "4.0.2"

[dev-dependencies]
tracing-subscriber = "0.3.1"
fake = { version = "2.4", features=['derive']}
