[package]
name = "rabbitmq-stream-client"
version = "0.4.3"
authors = ["wolf4ood <enrico.risa@gmail.com>", "korsmakolnikov <korsmakolnikov@gmail.com>", "gsantomaggio <g.santomaggio@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MPL-2.0"
description = "A Rust client for RabbitMQ Stream"
repository = "https://github.com/rabbitmq/rabbitmq-stream-rust-client"
keywords = ["AMQP", "IoT", "messaging", "streams"]
categories = ["network-programming"]
readme = "README.md"



[workspace]
members = [
    ".",
    "protocol",
    "benchmark"
]


[dependencies]
tokio-rustls = {version="0.24.1", features=["dangerous_configuration"]}
rustls-pemfile = "1.0.3"
rabbitmq-stream-protocol = { version = "0.4", path = "protocol" }
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
bytes = "1.0.0"
pin-project = { version = "1.0.0" }
tokio-stream = "0.1.11"
futures = "0.3.0"
url = "2.2.2"
tracing = "0.1"
thiserror = "1.0"
async-trait = "0.1.51"
rand = "0.8"
dashmap = "5.3.4"

[dev-dependencies]
tracing-subscriber = "0.3.1"
fake = { version = "2.4", features = ['derive'] }
chrono = "0.4.26"
