[package]
name = "rabbitmq-stream-client"
version = "0.8.0"
authors = ["wolf4ood <enrico.risa@gmail.com>", "korsmakolnikov <korsmakolnikov@gmail.com>", "gsantomaggio <g.santomaggio@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MPL-2.0"
description = "A Rust client for RabbitMQ Stream"
repository = "https://github.com/rabbitmq/rabbitmq-stream-rust-client"
keywords = ["AMQP", "IoT", "messaging", "streams"]
categories = ["network-programming"]
readme = "README.md"

[package.metadata."docs.rs"]
all-features = true

[workspace]
members = [
    ".",
    "protocol",
    "benchmark"
]


[dependencies]
tokio-rustls = { version = "0.26.1" }
rustls-pemfile = "2.2.0"
rabbitmq-stream-protocol = { version = "0.8", path = "protocol" }
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
bytes = "1.0.0"
pin-project = { version = "1.0.0" }
tokio-stream = "0.1.11"
futures = "0.3.0"
url = "2.2.2"
tracing = "0.1"
thiserror = "2.0"
async-trait = "0.1.51"
rand = "0.8"
dashmap = "6.1.0"
murmur3 = "0.5.2"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
tracing-subscriber = "0.3.1"
fake = { version = "4.2.0", features = ['derive'] }
chrono = "0.4.26"
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
serde = ["dep:serde"]

[[example]]
name="receive_super_stream"
path="examples/superstreams/receive_super_stream.rs"
[[example]]
name="send_super_stream_hash"
path="examples/superstreams/send_super_stream_hash.rs"
[[example]]
name="send_super_stream_routing_key"
path="examples/superstreams/send_super_stream_routing_key.rs"
[[example]]
name="send_super_stream"
path="examples/superstreams/send_super_stream.rs"
[[example]]
name="environment_deserialization"
path="examples/environment_deserialization.rs"

[[bin]]
name = "perf-producer"
path = "src/bin/perf-producer.rs"
