[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rabbitmq-stream-client = { path = "../" }
tracing-subscriber = "0.3.1"
tracing = "0.1"
tokio = { version = "1.12.0", features = ["full"] }
clap = "3.0.0-beta.5"
futures = "0.3.0"
async-trait = "0.1.51"
