[package]
name = "benchmark"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rabbitmq-stream-client = { path = "../" }
tracing-subscriber = "0.3.20"
tracing = "0.1"
tokio = { version = "1.48.0", features = ["full"] }
clap = { version = "4.5.51", features = ["derive"] }
futures = "0.3.31"
async-trait = "0.1.89"
