[package]
name = "rabbitmq-stream-protocol"
version = "0.4.2"
authors = ["wolf4ood <enrico.risa@gmail.com>", "korsmakolnikov <korsmakolnikov@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MPL-2.0"
description= "AMQP 1.0 message codec"
repository = "https://github.com/rabbitmq/rabbitmq-stream-rust-client"

[features]
wasm-bindgen = ["uuid/js"]

[dependencies]
byteorder = "1"
ordered-float = "4.1.0"
uuid = "1"
chrono = "0.4.26"
num_enum = "0.7.0"
derive_more = "0.99"

[dev-dependencies]
fake = { version = "2.5", features=['derive', 'chrono','uuid']}
rand = "0.8"
pretty_assertions = "1.2.0"
