[package]
name = "rabbitmq-stream-protocol"
version = "0.10.0"
authors = ["wolf4ood <enrico.risa@gmail.com>", "korsmakolnikov <korsmakolnikov@gmail.com>"]
edition = "2018"
license = "Apache-2.0 OR MPL-2.0"
description= "AMQP 1.0 message codec"
repository = "https://github.com/rabbitmq/rabbitmq-stream-rust-client"

[features]
wasm-bindgen = ["uuid/js"]

[dependencies]
byteorder = "1"
ordered-float = "4.6.0"
uuid = "1"
chrono = "0.4.42"
num_enum = "0.7.5"
derive_more = { version = "2.0.1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
fake = { version = "4.4", features = [ "derive", "chrono", "uuid" ] }
